--- a/netlify/functions/generateCurriculum/package.json
+++ b/netlify/functions/generateCurriculum/package.json
@@ -1,6 +1,17 @@
+# Main build settings
+[build]
+  # The folder with your public-facing website.
+  publish = "public"
+  # The folder where your backend functions are located.
+  functions = "netlify/functions"
 
-{
-  "dependencies": {
-    "@google/generative-ai": "^0.24.1"
-  }
-}
+# Environment settings for the build
+[build.environment]
+  # Sets the required Node.js version for the Google AI SDK.
+  NODE_VERSION = "18"
+
+# THIS IS THE FIX:
+# This plugin tells Netlify to automatically install dependencies
+# found in package.json files inside your function folders.
+[[plugins]]
+  package = "@netlify/plugin-functions-install-core
