--- a/netlify/functions/generateCurriculum/package.json
+++ b/netlify/functions/generateCurriculum/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@google/generative-ai": "^0.24.1"
+    "@google/generative-ai": "^0.24.1",
+    "@netlify/functions": "^2.0.0"
   }
 }
-
