--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,9 @@
 [build]
   publish = "public"
-  functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "18"
+
+[[edge_functions]]
+  path = "/generate-curriculum"
+  function = "generate-curriculum"
