--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
-  "name": "ai-curriculum-agent-final",
+  "name": "try2",
   "version": "1.0.0",
-  "description": "A curriculum generator using a Gemini agent on Netlify."
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "dependencies": {
+    "@google/generative-ai": "^0.24.1"
+  }
 }
